Changement couleurs / Ajout debut story board view

--- a/MaterialDesignTest/Views/Modules/ColorBalanceModuleView.xaml
+++ b/MaterialDesignTest/Views/Modules/ColorBalanceModuleView.xaml
@@ -10,7 +10,7 @@
              TextElement.FontSize="13"
              TextOptions.TextFormattingMode="Ideal"
              TextOptions.TextRenderingMode="Auto"
-             Background="{DynamicResource MaterialDesignPaper}"
+             Background="{DynamicResource MaterialDesignCardBackground}"
              TextElement.FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
