--- a/MaterialDesignTest/MainWindow.xaml
+++ b/MaterialDesignTest/MainWindow.xaml
@@ -72,7 +72,7 @@
     </Window.Resources>
     
     <DockPanel>
-        <Menu DockPanel.Dock="Top">
+        <Menu DockPanel.Dock="Top" Background="{DynamicResource MaterialDesignCardBackground}">
             <Menu.Effect>
                 <DropShadowEffect ShadowDepth="1" Opacity="0.5" />
             </Menu.Effect>
@@ -167,7 +167,7 @@
                 <ColumnDefinition />
                 <ColumnDefinition Width="0.2*" x:Name="col_right" />
             </Grid.ColumnDefinitions>
-
+<!--
             <StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button Background="{x:Null}" BorderBrush="{x:Null}">
@@ -176,8 +176,8 @@
                 </StackPanel>
                 <ContentControl Content="{Binding CurrentPageViewModel.SidePanel}" />
             </StackPanel>
-
-            <StackPanel>
+-->
+            <StackPanel Background="{DynamicResource MaterialDesignCardBackground}">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button Background="{x:Null}" BorderBrush="{x:Null}" Command="{Binding DataContext.HandleLeftPanel, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding DataContext.ApplicationViewState, RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
                         <materialDesign:PackIcon Kind="Close" />
@@ -188,7 +188,7 @@
 
             <ContentControl Grid.Column="1" Content="{Binding CurrentPageViewModel}" />
 
-            <StackPanel Grid.Column="2">
+            <StackPanel Grid.Column="2"  Background="{DynamicResource MaterialDesignCardBackground}">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <Button Background="{x:Null}" BorderBrush="{x:Null}" Command="{Binding DataContext.HandleRightPanel, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding DataContext.ApplicationViewState, RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
                         <materialDesign:PackIcon Kind="Close" />
