--- a/MaterialDesignTest/Views/Modules/ActionColorModuleView.xaml
+++ b/MaterialDesignTest/Views/Modules/ActionColorModuleView.xaml
@@ -11,7 +11,7 @@
             TextElement.FontSize="13"
             TextOptions.TextFormattingMode="Ideal"
             TextOptions.TextRenderingMode="Auto"
-            Background="{DynamicResource MaterialDesignPaper}"
+            Background="{DynamicResource MaterialDesignCardBackground}"
             TextElement.FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel Margin="16">
