--- a/MaterialDesignTest/Views/HomeView.xaml
+++ b/MaterialDesignTest/Views/HomeView.xaml
@@ -21,12 +21,15 @@
                     <VirtualizingStackPanel Orientation="Vertical" />
                 </ItemsPanelTemplate>
             </Menu.ItemsPanel>
-            <MenuItem Header="Nouveau fichier">
+            <MenuItem Header="Nouveau fichier"
+                      Command="{Binding DataContext.NewStoryBoardCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                      CommandParameter="{x:Null}">
                 <MenuItem.Icon>
                     <materialDesign:PackIcon Kind="FilePlus" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Ouvrir fichier" Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+            <MenuItem Header="Ouvrir fichier" 
+                      Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                       CommandParameter="{Binding DataContext.PageViewModels[2], RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
                 <MenuItem.Icon>
                     <materialDesign:PackIcon Kind="FileFind" />
