--- a/MaterialDesignTest/Views/Modules/StoryBoardElementActionView.xaml
+++ b/MaterialDesignTest/Views/Modules/StoryBoardElementActionView.xaml
@@ -19,5 +19,6 @@
         <Button Content="Ajouter élément" Command="{Binding Parent.AddStoryBoardElementCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
         <Button Content="Supprimer élément" Command="{Binding Parent.DeleteStoryBoardElementCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
         <Button Content="Envoyer" Command="{Binding Parent.SendStoryBoardCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
+        <Button Content="Sauvegarder" Command="{Binding Parent.SaveStoryBoardCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
     </StackPanel>
 </UserControl>
