--- a/MaterialDesignTest/MainWindow.xaml
+++ b/MaterialDesignTest/MainWindow.xaml
@@ -93,7 +93,9 @@
                         <materialDesign:PackIcon Kind="File" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Ouvrir">
+                <MenuItem Header="Ouvrir"
+                          Command="{Binding DataContext.OpenCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                          CommandParameter="{x:Null}">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="FileFind" />
                     </MenuItem.Icon>
