--- a/MaterialDesignTest/Views/StoryBoardView.xaml
+++ b/MaterialDesignTest/Views/StoryBoardView.xaml
@@ -35,7 +35,8 @@
         </StackPanel>
         
         <!-- Timeline --> 
-        <ListBox Margin="8" Grid.Row="1" x:Name="timeline" ItemsSource="{Binding Story}" VerticalAlignment="Center" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+        <ListBox Margin="8" Grid.Row="1" x:Name="timeline" ItemsSource="{Binding Story}" VerticalAlignment="Center" ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                 >
             <ie:Interaction.Triggers>
                 <ie:EventTrigger EventName="SelectionChanged">
                     <ie:InvokeCommandAction Command="{Binding ChangeStoryBoardElementCommand}" CommandParameter="{Binding ElementName=timeline, Path=SelectedItem}" />
