--- a/MaterialDesignTest/Views/HomeView.xaml
+++ b/MaterialDesignTest/Views/HomeView.xaml
@@ -42,7 +42,7 @@
                     <materialDesign:PackIcon Kind="Pencil" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Paramètre" Command="{Binding DataContext.ShowSettings, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{x:Null}">
+            <MenuItem Header="Paramètre" Command="{Binding DataContext.ChangeConfigurationCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{x:Null}">
                 <MenuItem.Icon>
                     <materialDesign:PackIcon Kind="Settings" />
                 </MenuItem.Icon>
