--- a/MaterialDesignTest/Views/Modules/ActionColorModuleView.xaml
+++ b/MaterialDesignTest/Views/Modules/ActionColorModuleView.xaml
@@ -15,7 +15,7 @@
             TextElement.FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel Margin="16">
-        <Label Content="Actions" />
+        <Label Content="{Binding ModuleName}" />
         <Button Content="Envoyer" Command="{Binding Parent.Send}" CommandParameter="{Binding Parent.MainColor}" Margin="0 8 0 8" />
     </StackPanel>
 </UserControl>
