--- a/MaterialDesignTest/Views/ConfigurationView.xaml
+++ b/MaterialDesignTest/Views/ConfigurationView.xaml
@@ -18,26 +18,45 @@
     <Window.DataContext>
         <viewModel:ConfigurationViewModel />
     </Window.DataContext>
-    <StackPanel VerticalAlignment="Center">
-        <Label Content="Réseau" Margin="0 0 0 8" />
+    <Grid Margin="8 8 8 8">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel>
+            <Label Content="Réseau" Margin="0 0 0 8" />
 
-        <Label Content="Nom d'hôte" FontSize="9" />
-        <TextBox Margin="0 0 0 8" Text="{Binding Hostname}" />
+            <Label Content="Nom d'hôte" FontSize="9" />
+            <TextBox Margin="0 0 0 8" Text="{Binding Hostname}" />
 
-        <Label Content="Port envoie" FontSize="9" />
-        <TextBox Margin="0 0 0 8" Text="{Binding SendPort}" />
+            <Label Content="Port envoie" FontSize="9" />
+            <TextBox Margin="0 0 0 8" Text="{Binding SendPort}" />
 
-        <Label Content="Port reception" FontSize="9" />
-        <TextBox Margin="0 0 0 16" Text="{Binding ReceivePort}" />
+            <Label Content="Port reception" FontSize="9" />
+            <TextBox Margin="0 0 0 16" Text="{Binding ReceivePort}" />
 
-        <Label Content="Source" Margin="0 0 0 8" />
-        <Label Content="Adresse élément" FontSize="9" />
-        <TextBox Margin="0 0 0 8" Text="{Binding LightAddress}" />
+            <Label Content="Source" Margin="0 0 0 8" />
+            <Label Content="Adresse élément" FontSize="9" />
+            <TextBox Margin="0 0 0 8" Text="{Binding LightAddress}" />
+        </StackPanel>
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal" Grid.Row="1">
 
-        <Button Content="Valider"
-                Margin="8" 
+            <Button Content="Annuler"
+                Command="{Binding DataContext.CancelDialogCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" 
+                HorizontalAlignment="Right"
+                Background="{x:Null}"
+                BorderBrush="{x:Null}"
+                VerticalAlignment="Bottom"
+        />
+            <Button Content="Valider"
                 Command="{Binding DataContext.ValidateDialogCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" 
+                HorizontalAlignment="Right"
+                Background="{x:Null}"
+                BorderBrush="{x:Null}"
+                VerticalAlignment="Bottom"
         />
-    </StackPanel>
+        </StackPanel>
+    </Grid>
 </Window>
