--- a/MaterialDesignTest/Views/Modules/StoryBoardInformationModuleView.xaml
+++ b/MaterialDesignTest/Views/Modules/StoryBoardInformationModuleView.xaml
@@ -14,16 +14,20 @@
             TextElement.FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel Margin="16">
-        <Label Content="Informations" Margin="0 0 0 16" />
+    <StackPanel>
+        <StackPanel Margin="16">
 
-        <Label Content="Nom de la storyboard" FontSize="9" />
-        <TextBox Text="{Binding Parent.StoryBoardName}" IsReadOnly="True" Margin="0 0 0 8" />
+            <Label Content="{Binding ModuleName}" Margin="0 0 0 16" />
 
-        <Label Content="Chemin de la storyboard" FontSize="9" />
-        <TextBox Text="{Binding Parent.StoryBoardPath}" IsReadOnly="True" Margin="0 0 0 8" />
-        
-        <Label Content="Nombre d'éléments" FontSize="9" />
-        <TextBox Text="{Binding Parent.ElementCount, Mode=OneWay}" IsReadOnly="True" Margin="0 0 0 8" />
+            <Label Content="Nom de la storyboard" FontSize="9" />
+            <TextBox Text="{Binding Parent.StoryBoardName}" IsReadOnly="True" Margin="0 0 0 8" />
+
+            <Label Content="Chemin de la storyboard" FontSize="9" />
+            <TextBox Text="{Binding Parent.StoryBoardPath}" IsReadOnly="True" Margin="0 0 0 8" />
+
+            <Label Content="Nombre d'éléments" FontSize="9" />
+            <TextBox Text="{Binding Parent.ElementCount, Mode=OneWay}" IsReadOnly="True" Margin="0 0 0 8" />
+        </StackPanel>
+        <Separator />
     </StackPanel>
 </UserControl>
