--- a/MaterialDesignTest/Views/Modules/StoryBoardElementActionView.xaml
+++ b/MaterialDesignTest/Views/Modules/StoryBoardElementActionView.xaml
@@ -14,11 +14,14 @@
     TextElement.FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel Margin="16">
-        <Label Content="Actions" />
-        <Button Content="Ajouter élément" Command="{Binding Parent.AddStoryBoardElementCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
-        <Button Content="Supprimer élément" Command="{Binding Parent.DeleteStoryBoardElementCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
-        <Button Content="Envoyer" Command="{Binding Parent.SendStoryBoardCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
-        <Button Content="Sauvegarder" Command="{Binding Parent.SaveStoryBoardCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
+    <StackPanel>
+        <StackPanel Margin="16">
+            <Label Content="{Binding ModuleName}" />
+            <Button Content="AJOUTER" Command="{Binding Parent.AddStoryBoardElementCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
+            <Button Content="SUPPRIMER" Command="{Binding Parent.DeleteStoryBoardElementCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
+            <Button Content="ENVOYER" Command="{Binding Parent.SendStoryBoardCommand}" CommandParameter="{Binding Parent.CurrentElement}" Margin="0 8 0 8" />
+            <Button Content="SAUVEGARDER" Command="{Binding Parent.SaveStoryBoardCommand}" CommandParameter="{x:Null}" Margin="0 8 0 8" />
+        </StackPanel>
+        <Separator />
     </StackPanel>
 </UserControl>
